--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "vue": "^2.6.14",
+    "vue-apollo": "^3.1.0",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2"
   },
