--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
     "apollo-link-http": "^1.5.17",
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue": "^2.23.1",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "vue": "^2.6.14",
